画像バイナリデータ取得エンドポイント改良
